[demo] Skeleton for the UI

--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -7,8 +7,17 @@
   <meta name="description" content="A light foundation for your next frontend project based on webpack.">
 </head>
 <body>
-  <img src="images/webpack.png" alt="Webpack logo">
-  <h1>webpack starter</h1>
-  <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+  <div id="left">
+    <img src="images/schlogo-250.png" alt="6.945 logo" id="logo">
+    <h1>Web-scheme demo</h1>
+    <button id="upload">Upload assembly...</button>
+    <textarea id="output" rows="50">
+      Some output...
+    </textarea>
+  </div>
+  <div style="margin-left: 22%;">
+    <textarea id="input" rows="100">
+    </textarea>
+  </div>
 </body>
 </html>
