--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>webpack starterkit</title>
+  <title>web-scheme Demo</title>
   <meta name="description" content="A light foundation for your next frontend project based on webpack.">
 </head>
 <body>
+  <script src="./scripts/index.js"></script>
   <div id="left">
     <img src="images/schlogo-250.png" alt="6.945 logo" id="logo">
-    <h1>Web-scheme demo</h1>
-    <button id="upload">Upload assembly...</button>
-    <textarea id="output" rows="50">
-      Some output...
-    </textarea>
+    <h1>web-scheme Demo</h1>
+    <input type="file" id="fileInput" class="btn"></button>
+    <button id="upload" class="btn">Upload assembly</button>
+    <button id="run" class="btn">Run register machine</button>
+    <textarea id="output" rows="50">Some output...</textarea>
   </div>
   <div style="margin-left: 22%;">
-    <textarea id="input" rows="100">
-    </textarea>
+    <textarea id="input" rows="100"></textarea>
   </div>
 </body>
 </html>
