Implement file uploading

--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -11,8 +11,8 @@
   <div id="left">
     <img src="images/schlogo-250.png" alt="6.945 logo" id="logo">
     <h1>web-scheme Demo</h1>
-    <input type="file" id="fileInput" class="btn"></button>
-    <button id="upload" class="btn">Upload assembly</button>
+    <label id="fin-label">Upload assembly...</label>
+    <input type="file" id="file-input" class="btn"></input>
     <button id="run" class="btn">Run register machine</button>
     <textarea id="output" rows="50">Some output...</textarea>
   </div>
