--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="A light foundation for your next frontend project based on webpack.">
 </head>
 <body>
-  <script src="./scripts/index.js"></script>
+  <script src="./scripts/index.js" type="module"></script>
   <div id="left">
     <img src="images/schlogo-250.png" alt="6.945 logo" id="logo">
     <h1>web-scheme Demo</h1>
