--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>web-scheme Demo</title>
   <meta name="description" content="A light foundation for your next frontend project based on webpack.">
 </head>
+
 <body>
   <script src="./scripts/index.js" type="module"></script>
   <div id="left">
@@ -14,10 +16,11 @@
     <label id="fin-label">Upload assembly...</label>
     <input type="file" id="file-input" class="btn"></input>
     <button id="run" class="btn">Run register machine</button>
-    <textarea id="output" rows="50">Some output...</textarea>
+    <textarea id="output">Some output...</textarea>
   </div>
-  <div style="margin-left: 22%;">
-    <textarea id="input" rows="100"></textarea>
+  <div id="right">
+    <textarea id="input"></textarea>
   </div>
 </body>
+
 </html>
