[demo] Some cosmetic micro-adjustments

--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -16,10 +16,12 @@
     <label id="fin-label">Upload assembly...</label>
     <input type="file" id="file-input" class="btn"></input>
     <button id="run" class="btn">Run register machine</button>
-    <textarea id="output">Some output...</textarea>
+    <textarea id="output" readonly placeholder="Click the button above to see the output!">
+      Some output...
+    </textarea>
   </div>
   <div id="right">
-    <textarea id="input"></textarea>
+    <textarea id="input" placeholder="Upload or paste the assembly file here!"></textarea>
   </div>
 </body>
 
