--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <script src="./scripts/index.js" type="module"></script>
+  <script src="./scripts/index.js"></script>
   <div id="left">
     <img src="images/schlogo-250.png" alt="6.945 logo" id="logo">
     <h1>web-scheme Demo</h1>
@@ -21,7 +21,7 @@
     </textarea>
   </div>
   <div id="right">
-    <textarea id="input" placeholder="Upload or paste the assembly file here!"></textarea>
+    <textarea id="input" spellcheck="false" placeholder="Upload or paste the assembly file here!"></textarea>
   </div>
 </body>
 
